# ModelToDeps

./: .gitignore  pyproject.toml
Tests-V0/: main.py  script.py  test.json
Tests-V0/diagram/: edge_item.py  models.py  node_item.py  scene.py
src/app/: app_context.py  main.py  navigation.py
src/domain/models/: component_catalog.py  diagram.py  equations.py  project.py  validation.py
src/domain/services/: deps_generator.py  equation_parser.py  project_service.py
src/infrastructure/repositories/: project_repository.py
src/infrastructure/storage/: file_storage.py
src/ui/: main_window.py
src/ui/pages/: editor_page.py  start_page.py
src/ui/pages/wizard/: base_step.py  step_01_archi.py  step_01_system.py  step_02_observer.py  step_02_signaux.py  step_03_logic.py  step_03_task.py  step_04_intra_task.py  step_05_inter_task.py  step_06_succession.py  step_07_priority.py  step_08_global.py  step_status.py  wizard_page.py
src/ui/widgets/: component_library.py  diagram_view.py
