[project]
name = "modeltodeps"
version = "0.1.0"
description = ""
authors = [
    {name = "davidannebicque",email = "david.annebicque@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pyside6 (>=6.10.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
